--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,15 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta property="og:title" content="Little Lemon"/>
+    <meta property="og:description" content="Little Lemon is a family owned restaurant located in chicago" />
+    <meta property="og:type" content="restaurant"/>
+    <meta property="og:url" content="https://www.littlelemon.com"/>
+    <meta property="og:image" content="http://localhost:3000/static/media/Logo%20.f72c913c48c5334f78f2c336ec36f22b.svg" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Markazi+Text:wght@400;500;600;700&display=swap" rel="stylesheet">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -18,6 +26,7 @@
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
+  
       Only files inside the `public` folder can be referenced from the HTML.
 
       Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
